// <auto-generated> This file has been auto generated by EF Core Power Tools. </auto-generated>
#nullable disable
using System;
using System.Collections.Generic;
using OurGame.Persistence.Enums;

namespace OurGame.Persistence.Models;

public partial class AgeGroup
{
    public Guid Id { get; set; }

    public Guid ClubId { get; set; }

    public string Name { get; set; }

    public string Code { get; set; }

    public Level Level { get; set; }

    public string CurrentSeason { get; set; }

    public string Seasons { get; set; }

    public string DefaultSeason { get; set; }

    public SquadSize DefaultSquadSize { get; set; }

    public string Description { get; set; }

    public bool IsArchived { get; set; }

    public DateTime CreatedAt { get; set; }

    public DateTime UpdatedAt { get; set; }

    public virtual ICollection<AgeGroupCoordinator> AgeGroupCoordinators { get; set; } = new List<AgeGroupCoordinator>();

    public virtual Club Club { get; set; }

    public virtual ICollection<PlayerAgeGroup> PlayerAgeGroups { get; set; } = new List<PlayerAgeGroup>();

    public virtual ICollection<Team> Teams { get; set; } = new List<Team>();
}
