// <auto-generated> This file has been auto generated by EF Core Power Tools. </auto-generated>
#nullable disable
using System;
using System.Collections.Generic;
using OurGame.Persistence.Enums;

namespace OurGame.Persistence.Models;

public partial class Card
{
    public Guid Id { get; set; }

    public Guid MatchReportId { get; set; }

    public Guid PlayerId { get; set; }

    public CardType Type { get; set; }

    public int Minute { get; set; }

    public string Reason { get; set; }

    public virtual MatchReport MatchReport { get; set; }

    public virtual Player Player { get; set; }
}
