// <auto-generated> This file has been auto generated by EF Core Power Tools. </auto-generated>
#nullable disable
using System;
using System.Collections.Generic;

namespace OurGame.Persistence.Models;

public partial class Club
{
    public Guid Id { get; set; }

    public string Name { get; set; }

    public string ShortName { get; set; }

    public string Logo { get; set; }

    public string PrimaryColor { get; set; }

    public string SecondaryColor { get; set; }

    public string AccentColor { get; set; }

    public string City { get; set; }

    public string Country { get; set; }

    public string Venue { get; set; }

    public string Address { get; set; }

    public int? FoundedYear { get; set; }

    public string History { get; set; }

    public string Ethos { get; set; }

    public string Principles { get; set; }

    public DateTime CreatedAt { get; set; }

    public DateTime UpdatedAt { get; set; }

    public virtual ICollection<AgeGroup> AgeGroups { get; set; } = new List<AgeGroup>();

    public virtual ICollection<Coach> Coaches { get; set; } = new List<Coach>();

    public virtual ICollection<DrillTemplate> DrillTemplates { get; set; } = new List<DrillTemplate>();

    public virtual ICollection<Drill> Drills { get; set; } = new List<Drill>();

    public virtual ICollection<Formation> Formations { get; set; } = new List<Formation>();

    public virtual ICollection<Kit> Kits { get; set; } = new List<Kit>();

    public virtual ICollection<Player> Players { get; set; } = new List<Player>();

    public virtual ICollection<Team> Teams { get; set; } = new List<Team>();

    public virtual ICollection<User> Users { get; set; } = new List<User>();
}
