// <auto-generated> This file has been auto generated by EF Core Power Tools. </auto-generated>
#nullable disable
using System;
using System.Collections.Generic;
using OurGame.Persistence.Enums;

namespace OurGame.Persistence.Models;

public partial class Coach
{
    public Guid Id { get; set; }

    public Guid ClubId { get; set; }

    public string FirstName { get; set; }

    public string LastName { get; set; }

    public DateOnly? DateOfBirth { get; set; }

    public string Photo { get; set; }

    public string Email { get; set; }

    public string Phone { get; set; }

    public string AssociationId { get; set; }

    public bool HasAccount { get; set; }

    public CoachRole Role { get; set; }

    public string Biography { get; set; }

    public string Specializations { get; set; }

    public bool IsArchived { get; set; }

    public DateTime CreatedAt { get; set; }

    public DateTime UpdatedAt { get; set; }

    public virtual ICollection<AgeGroupCoordinator> AgeGroupCoordinators { get; set; } = new List<AgeGroupCoordinator>();

    public virtual ICollection<AttributeEvaluation> AttributeEvaluations { get; set; } = new List<AttributeEvaluation>();

    public virtual Club Club { get; set; }

    public virtual ICollection<DevelopmentPlan> DevelopmentPlans { get; set; } = new List<DevelopmentPlan>();

    public virtual ICollection<DrillTemplate> DrillTemplates { get; set; } = new List<DrillTemplate>();

    public virtual ICollection<Drill> Drills { get; set; } = new List<Drill>();

    public virtual ICollection<Formation> Formations { get; set; } = new List<Formation>();

    public virtual ICollection<MatchCoach> MatchCoaches { get; set; } = new List<MatchCoach>();

    public virtual ICollection<PlayerReport> PlayerReports { get; set; } = new List<PlayerReport>();

    public virtual ICollection<ProgressNote> ProgressNotes { get; set; } = new List<ProgressNote>();

    public virtual ICollection<SessionCoach> SessionCoaches { get; set; } = new List<SessionCoach>();

    public virtual ICollection<TeamCoach> TeamCoaches { get; set; } = new List<TeamCoach>();

    public virtual ICollection<TrainingPlan> TrainingPlans { get; set; } = new List<TrainingPlan>();
}
