// <auto-generated> This file has been auto generated by EF Core Power Tools. </auto-generated>
#nullable disable
using System;
using System.Collections.Generic;

namespace OurGame.Persistence.Models;

public partial class DevelopmentGoal
{
    public Guid Id { get; set; }

    public Guid PlanId { get; set; }

    public string Goal { get; set; }

    public string Actions { get; set; }

    public DateOnly? StartDate { get; set; }

    public DateOnly? TargetDate { get; set; }

    public bool Completed { get; set; }

    public DateOnly? CompletedDate { get; set; }

    public int? Progress { get; set; }

    public virtual DevelopmentPlan Plan { get; set; }
}
