// <auto-generated> This file has been auto generated by EF Core Power Tools. </auto-generated>
#nullable disable
using System;
using System.Collections.Generic;
using OurGame.Persistence.Enums;

namespace OurGame.Persistence.Models;

public partial class DevelopmentPlan
{
    public Guid Id { get; set; }

    public Guid PlayerId { get; set; }

    public Guid? CreatedBy { get; set; }

    public string Title { get; set; }

    public string Description { get; set; }

    public DateOnly? PeriodStart { get; set; }

    public DateOnly? PeriodEnd { get; set; }

    public PlanStatus Status { get; set; }

    public string CoachNotes { get; set; }

    public Guid? LinkedReportId { get; set; }

    public DateTime CreatedAt { get; set; }

    public DateTime UpdatedAt { get; set; }

    public virtual Coach CreatedByNavigation { get; set; }

    public virtual ICollection<DevelopmentGoal> DevelopmentGoals { get; set; } = new List<DevelopmentGoal>();

    public virtual PlayerReport LinkedReport { get; set; }

    public virtual Player Player { get; set; }
}
