// <auto-generated> This file has been auto generated by EF Core Power Tools. </auto-generated>
#nullable disable
using System;
using System.Collections.Generic;
using OurGame.Persistence.Enums;

namespace OurGame.Persistence.Models;

public partial class Drill
{
    public Guid Id { get; set; }

    public string Name { get; set; }

    public string Description { get; set; }

    public int? DurationMinutes { get; set; }

    public DrillCategory Category { get; set; }

    public string Attributes { get; set; }

    public string Equipment { get; set; }

    public string Diagram { get; set; }

    public string Instructions { get; set; }

    public string Variations { get; set; }

    public Guid? ClubId { get; set; }

    public Guid? CreatedBy { get; set; }

    public bool IsPublic { get; set; }

    public DateTime CreatedAt { get; set; }

    public DateTime UpdatedAt { get; set; }

    public virtual Club Club { get; set; }

    public virtual Coach CreatedByNavigation { get; set; }

    public virtual ICollection<DrillLink> DrillLinks { get; set; } = new List<DrillLink>();

    public virtual ICollection<PersonalSessionDrill> PersonalSessionDrills { get; set; } = new List<PersonalSessionDrill>();

    public virtual ICollection<SessionDrill> SessionDrills { get; set; } = new List<SessionDrill>();

    public virtual ICollection<TemplateDrill> TemplateDrills { get; set; } = new List<TemplateDrill>();
}
