// <auto-generated> This file has been auto generated by EF Core Power Tools. </auto-generated>
#nullable disable
using System;
using System.Collections.Generic;
using OurGame.Persistence.Enums;

namespace OurGame.Persistence.Models;

public partial class DrillLink
{
    public Guid Id { get; set; }

    public Guid DrillId { get; set; }

    public string Url { get; set; }

    public string Title { get; set; }

    public LinkType Type { get; set; }

    public virtual Drill Drill { get; set; }
}
