// <auto-generated> This file has been auto generated by EF Core Power Tools. </auto-generated>
#nullable disable
using System;
using System.Collections.Generic;

namespace OurGame.Persistence.Models;

public partial class DrillTemplate
{
    public Guid Id { get; set; }

    public string Name { get; set; }

    public string Description { get; set; }

    public string AggregatedAttributes { get; set; }

    public int? TotalDuration { get; set; }

    public string Category { get; set; }

    public Guid? ClubId { get; set; }

    public Guid? CreatedBy { get; set; }

    public bool IsPublic { get; set; }

    public DateTime CreatedAt { get; set; }

    public virtual ICollection<AppliedTemplate> AppliedTemplates { get; set; } = new List<AppliedTemplate>();

    public virtual Club Club { get; set; }

    public virtual Coach CreatedByNavigation { get; set; }

    public virtual ICollection<SessionDrill> SessionDrills { get; set; } = new List<SessionDrill>();

    public virtual ICollection<TemplateDrill> TemplateDrills { get; set; } = new List<TemplateDrill>();

    public virtual ICollection<TrainingSession> TrainingSessions { get; set; } = new List<TrainingSession>();
}
