// <auto-generated> This file has been auto generated by EF Core Power Tools. </auto-generated>
#nullable disable
using System;
using System.Collections.Generic;
using OurGame.Persistence.Enums;

namespace OurGame.Persistence.Models;

public partial class Formation
{
    public Guid Id { get; set; }

    public string Name { get; set; }

    public string System { get; set; }

    public SquadSize SquadSize { get; set; }

    public bool IsSystemFormation { get; set; }

    public Guid? ParentFormationId { get; set; }

    public Guid? ParentTacticId { get; set; }

    public string Summary { get; set; }

    public string Description { get; set; }

    public string Style { get; set; }

    public ScopeType ScopeType { get; set; }

    public Guid? ScopeClubId { get; set; }

    public Guid? ScopeAgeGroupId { get; set; }

    public Guid? ScopeTeamId { get; set; }

    public Guid? CreatedBy { get; set; }

    public string Tags { get; set; }

    public DateTime CreatedAt { get; set; }

    public DateTime UpdatedAt { get; set; }

    public virtual Coach CreatedByNavigation { get; set; }

    public virtual ICollection<FormationPosition> FormationPositions { get; set; } = new List<FormationPosition>();

    public virtual ICollection<Formation> InverseParentFormation { get; set; } = new List<Formation>();

    public virtual ICollection<Formation> InverseParentTactic { get; set; } = new List<Formation>();

    public virtual ICollection<MatchLineup> MatchLineupFormations { get; set; } = new List<MatchLineup>();

    public virtual ICollection<MatchLineup> MatchLineupTactics { get; set; } = new List<MatchLineup>();

    public virtual Formation ParentFormation { get; set; }

    public virtual Formation ParentTactic { get; set; }

    public virtual ICollection<PositionOverride> PositionOverrides { get; set; } = new List<PositionOverride>();

    public virtual Club ScopeClub { get; set; }

    public virtual ICollection<TacticPrinciple> TacticPrinciples { get; set; } = new List<TacticPrinciple>();

    public virtual ICollection<Team> Teams { get; set; } = new List<Team>();
}
