// <auto-generated> This file has been auto generated by EF Core Power Tools. </auto-generated>
#nullable disable
using System;
using System.Collections.Generic;
using OurGame.Persistence.Enums;

namespace OurGame.Persistence.Models;

public partial class Injury
{
    public Guid Id { get; set; }

    public Guid MatchReportId { get; set; }

    public Guid PlayerId { get; set; }

    public int Minute { get; set; }

    public string Description { get; set; }

    public Severity Severity { get; set; }

    public virtual MatchReport MatchReport { get; set; }

    public virtual Player Player { get; set; }
}
