// <auto-generated> This file has been auto generated by EF Core Power Tools. </auto-generated>
#nullable disable
using System;
using System.Collections.Generic;
using OurGame.Persistence.Enums;

namespace OurGame.Persistence.Models;

public partial class Kit
{
    public Guid Id { get; set; }

    public Guid ClubId { get; set; }

    public Guid? TeamId { get; set; }

    public string Name { get; set; }

    public KitType Type { get; set; }

    public string ShirtColor { get; set; }

    public string ShortsColor { get; set; }

    public string SocksColor { get; set; }

    public string Season { get; set; }

    public bool IsActive { get; set; }

    public DateTime CreatedAt { get; set; }

    public virtual Club Club { get; set; }

    public virtual ICollection<Match> MatchGoalkeeperKits { get; set; } = new List<Match>();

    public virtual ICollection<Match> MatchPrimaryKits { get; set; } = new List<Match>();

    public virtual ICollection<Match> MatchSecondaryKits { get; set; } = new List<Match>();

    public virtual Team Team { get; set; }
}
