// <auto-generated> This file has been auto generated by EF Core Power Tools. </auto-generated>
#nullable disable
using System;
using System.Collections.Generic;
using OurGame.Persistence.Enums;

namespace OurGame.Persistence.Models;

public partial class KitOrder
{
    public Guid Id { get; set; }

    public Guid PlayerId { get; set; }

    public Guid TeamId { get; set; }

    public decimal? TotalAmount { get; set; }

    public OrderStatus Status { get; set; }

    public Guid? OrderedBy { get; set; }

    public DateTime OrderedAt { get; set; }

    public virtual ICollection<KitOrderItem> KitOrderItems { get; set; } = new List<KitOrderItem>();

    public virtual User OrderedByNavigation { get; set; }

    public virtual Player Player { get; set; }

    public virtual Team Team { get; set; }
}
