// <auto-generated> This file has been auto generated by EF Core Power Tools. </auto-generated>
#nullable disable
using System;
using System.Collections.Generic;
using OurGame.Persistence.Enums;

namespace OurGame.Persistence.Models;

public partial class KitOrderItem
{
    public Guid Id { get; set; }

    public Guid OrderId { get; set; }

    public KitItemType Type { get; set; }

    public string Size { get; set; }

    public int Quantity { get; set; }

    public decimal? Price { get; set; }

    public virtual KitOrder Order { get; set; }
}
