// <auto-generated> This file has been auto generated by EF Core Power Tools. </auto-generated>
#nullable disable
using System;
using System.Collections.Generic;
using OurGame.Persistence.Enums;

namespace OurGame.Persistence.Models;

public partial class Match
{
    public Guid Id { get; set; }

    public Guid TeamId { get; set; }

    public string SeasonId { get; set; }

    public SquadSize SquadSize { get; set; }

    public string Opposition { get; set; }

    public DateTime MatchDate { get; set; }

    public DateTime? MeetTime { get; set; }

    public DateTime? KickOffTime { get; set; }

    public string Location { get; set; }

    public bool IsHome { get; set; }

    public string Competition { get; set; }

    public Guid? PrimaryKitId { get; set; }

    public Guid? SecondaryKitId { get; set; }

    public Guid? GoalkeeperKitId { get; set; }

    public int? HomeScore { get; set; }

    public int? AwayScore { get; set; }

    public MatchStatus Status { get; set; }

    public bool IsLocked { get; set; }

    public string Notes { get; set; }

    public string WeatherCondition { get; set; }

    public int? WeatherTemperature { get; set; }

    public DateTime CreatedAt { get; set; }

    public DateTime UpdatedAt { get; set; }

    public virtual Kit GoalkeeperKit { get; set; }

    public virtual ICollection<MatchCoach> MatchCoaches { get; set; } = new List<MatchCoach>();

    public virtual ICollection<MatchLineup> MatchLineups { get; set; } = new List<MatchLineup>();

    public virtual ICollection<MatchReport> MatchReports { get; set; } = new List<MatchReport>();

    public virtual ICollection<MatchSubstitution> MatchSubstitutions { get; set; } = new List<MatchSubstitution>();

    public virtual Kit PrimaryKit { get; set; }

    public virtual Kit SecondaryKit { get; set; }

    public virtual Team Team { get; set; }
}
