// <auto-generated> This file has been auto generated by EF Core Power Tools. </auto-generated>
#nullable disable
using System;
using System.Collections.Generic;

namespace OurGame.Persistence.Models;

public partial class MatchLineup
{
    public Guid Id { get; set; }

    public Guid MatchId { get; set; }

    public Guid? FormationId { get; set; }

    public Guid? TacticId { get; set; }

    public virtual Formation Formation { get; set; }

    public virtual ICollection<LineupPlayer> LineupPlayers { get; set; } = new List<LineupPlayer>();

    public virtual Match Match { get; set; }

    public virtual Formation Tactic { get; set; }
}
