// <auto-generated> This file has been auto generated by EF Core Power Tools. </auto-generated>
#nullable disable
using System;
using System.Collections.Generic;

namespace OurGame.Persistence.Models;

public partial class MatchReport
{
    public Guid Id { get; set; }

    public Guid MatchId { get; set; }

    public string Summary { get; set; }

    public Guid? CaptainId { get; set; }

    public Guid? PlayerOfMatchId { get; set; }

    public DateTime CreatedAt { get; set; }

    public virtual Player Captain { get; set; }

    public virtual ICollection<Card> Cards { get; set; } = new List<Card>();

    public virtual ICollection<Goal> Goals { get; set; } = new List<Goal>();

    public virtual ICollection<Injury> Injuries { get; set; } = new List<Injury>();

    public virtual Match Match { get; set; }

    public virtual ICollection<PerformanceRating> PerformanceRatings { get; set; } = new List<PerformanceRating>();

    public virtual Player PlayerOfMatch { get; set; }
}
