// <auto-generated> This file has been auto generated by EF Core Power Tools. </auto-generated>
#nullable disable
using System;
using System.Collections.Generic;

namespace OurGame.Persistence.Models;

public partial class PersonalSession
{
    public Guid Id { get; set; }

    public Guid PlanId { get; set; }

    public string Title { get; set; }

    public DateTime SessionDate { get; set; }

    public string FocusAreas { get; set; }

    public bool Completed { get; set; }

    public string Notes { get; set; }

    public virtual ICollection<PersonalSessionDrill> PersonalSessionDrills { get; set; } = new List<PersonalSessionDrill>();

    public virtual TrainingPlan Plan { get; set; }
}
