// <auto-generated> This file has been auto generated by EF Core Power Tools. </auto-generated>
#nullable disable
using System;
using System.Collections.Generic;

namespace OurGame.Persistence.Models;

public partial class Player
{
    public Guid Id { get; set; }

    public Guid ClubId { get; set; }

    public string FirstName { get; set; }

    public string LastName { get; set; }

    public string Nickname { get; set; }

    public DateOnly? DateOfBirth { get; set; }

    public string Photo { get; set; }

    public string AssociationId { get; set; }

    public string PreferredPositions { get; set; }

    public int? OverallRating { get; set; }

    public string Allergies { get; set; }

    public string MedicalConditions { get; set; }

    public bool IsArchived { get; set; }

    public DateTime CreatedAt { get; set; }

    public DateTime UpdatedAt { get; set; }

    public virtual ICollection<AttributeEvaluation> AttributeEvaluations { get; set; } = new List<AttributeEvaluation>();

    public virtual ICollection<Card> Cards { get; set; } = new List<Card>();

    public virtual Club Club { get; set; }

    public virtual ICollection<DevelopmentPlan> DevelopmentPlans { get; set; } = new List<DevelopmentPlan>();

    public virtual ICollection<EmergencyContact> EmergencyContacts { get; set; } = new List<EmergencyContact>();

    public virtual ICollection<Goal> GoalAssistPlayers { get; set; } = new List<Goal>();

    public virtual ICollection<Goal> GoalPlayers { get; set; } = new List<Goal>();

    public virtual ICollection<Injury> Injuries { get; set; } = new List<Injury>();

    public virtual ICollection<KitOrder> KitOrders { get; set; } = new List<KitOrder>();

    public virtual ICollection<LineupPlayer> LineupPlayers { get; set; } = new List<LineupPlayer>();

    public virtual ICollection<MatchReport> MatchReportCaptains { get; set; } = new List<MatchReport>();

    public virtual ICollection<MatchReport> MatchReportPlayerOfMatches { get; set; } = new List<MatchReport>();

    public virtual ICollection<MatchSubstitution> MatchSubstitutionPlayerIns { get; set; } = new List<MatchSubstitution>();

    public virtual ICollection<MatchSubstitution> MatchSubstitutionPlayerOuts { get; set; } = new List<MatchSubstitution>();

    public virtual ICollection<PerformanceRating> PerformanceRatings { get; set; } = new List<PerformanceRating>();

    public virtual ICollection<PlayerAgeGroup> PlayerAgeGroups { get; set; } = new List<PlayerAgeGroup>();

    public virtual PlayerAttribute PlayerAttribute { get; set; }

    public virtual ICollection<PlayerImage> PlayerImages { get; set; } = new List<PlayerImage>();

    public virtual ICollection<PlayerParent> PlayerParents { get; set; } = new List<PlayerParent>();

    public virtual ICollection<PlayerReport> PlayerReports { get; set; } = new List<PlayerReport>();

    public virtual ICollection<PlayerTeam> PlayerTeams { get; set; } = new List<PlayerTeam>();

    public virtual ICollection<SessionAttendance> SessionAttendances { get; set; } = new List<SessionAttendance>();

    public virtual ICollection<TrainingPlan> TrainingPlans { get; set; } = new List<TrainingPlan>();
}
