// <auto-generated> This file has been auto generated by EF Core Power Tools. </auto-generated>
#nullable disable
using System;
using System.Collections.Generic;

namespace OurGame.Persistence.Models;

public partial class PlayerAttribute
{
    public Guid Id { get; set; }

    public Guid PlayerId { get; set; }

    public int? BallControl { get; set; }

    public int? Crossing { get; set; }

    public int? WeakFoot { get; set; }

    public int? Dribbling { get; set; }

    public int? Finishing { get; set; }

    public int? FreeKick { get; set; }

    public int? Heading { get; set; }

    public int? LongPassing { get; set; }

    public int? LongShot { get; set; }

    public int? Penalties { get; set; }

    public int? ShortPassing { get; set; }

    public int? ShotPower { get; set; }

    public int? SlidingTackle { get; set; }

    public int? StandingTackle { get; set; }

    public int? Volleys { get; set; }

    public int? Acceleration { get; set; }

    public int? Agility { get; set; }

    public int? Balance { get; set; }

    public int? Jumping { get; set; }

    public int? Pace { get; set; }

    public int? Reactions { get; set; }

    public int? SprintSpeed { get; set; }

    public int? Stamina { get; set; }

    public int? Strength { get; set; }

    public int? Aggression { get; set; }

    public int? AttackingPosition { get; set; }

    public int? Awareness { get; set; }

    public int? Communication { get; set; }

    public int? Composure { get; set; }

    public int? DefensivePositioning { get; set; }

    public int? Interceptions { get; set; }

    public int? Marking { get; set; }

    public int? Positivity { get; set; }

    public int? Positioning { get; set; }

    public int? Vision { get; set; }

    public DateTime UpdatedAt { get; set; }

    public virtual Player Player { get; set; }
}
