// <auto-generated> This file has been auto generated by EF Core Power Tools. </auto-generated>
#nullable disable
using System;
using System.Collections.Generic;

namespace OurGame.Persistence.Models;

public partial class PlayerImage
{
    public Guid Id { get; set; }

    public Guid PlayerId { get; set; }

    public string Url { get; set; }

    public string Caption { get; set; }

    public DateTime? PhotoDate { get; set; }

    public Guid? UploadedBy { get; set; }

    public string Tags { get; set; }

    public DateTime CreatedAt { get; set; }

    public virtual Player Player { get; set; }

    public virtual User UploadedByNavigation { get; set; }
}
