// <auto-generated> This file has been auto generated by EF Core Power Tools. </auto-generated>
#nullable disable
using System;
using System.Collections.Generic;

namespace OurGame.Persistence.Models;

public partial class PlayerReport
{
    public Guid Id { get; set; }

    public Guid PlayerId { get; set; }

    public DateOnly? PeriodStart { get; set; }

    public DateOnly? PeriodEnd { get; set; }

    public decimal? OverallRating { get; set; }

    public string Strengths { get; set; }

    public string AreasForImprovement { get; set; }

    public string CoachComments { get; set; }

    public Guid? CreatedBy { get; set; }

    public DateTime CreatedAt { get; set; }

    public virtual Coach CreatedByNavigation { get; set; }

    public virtual ICollection<DevelopmentPlan> DevelopmentPlans { get; set; } = new List<DevelopmentPlan>();

    public virtual Player Player { get; set; }

    public virtual ICollection<ReportDevelopmentAction> ReportDevelopmentActions { get; set; } = new List<ReportDevelopmentAction>();

    public virtual ICollection<SimilarProfessional> SimilarProfessionals { get; set; } = new List<SimilarProfessional>();
}
