// <auto-generated> This file has been auto generated by EF Core Power Tools. </auto-generated>
#nullable disable
using System;
using System.Collections.Generic;

namespace OurGame.Persistence.Models;

public partial class ProgressNote
{
    public Guid Id { get; set; }

    public Guid PlanId { get; set; }

    public DateTime NoteDate { get; set; }

    public string Note { get; set; }

    public Guid? AddedBy { get; set; }

    public virtual Coach AddedByNavigation { get; set; }

    public virtual TrainingPlan Plan { get; set; }
}
