// <auto-generated> This file has been auto generated by EF Core Power Tools. </auto-generated>
#nullable disable
using System;
using System.Collections.Generic;

namespace OurGame.Persistence.Models;

public partial class TacticPrinciple
{
    public Guid Id { get; set; }

    public Guid FormationId { get; set; }

    public string Title { get; set; }

    public string Description { get; set; }

    public string PositionIndices { get; set; }

    public virtual Formation Formation { get; set; }
}
