// <auto-generated> This file has been auto generated by EF Core Power Tools. </auto-generated>
#nullable disable
using System;
using System.Collections.Generic;

namespace OurGame.Persistence.Models;

public partial class Team
{
    public Guid Id { get; set; }

    public Guid ClubId { get; set; }

    public Guid AgeGroupId { get; set; }

    public string Name { get; set; }

    public string ShortName { get; set; }

    public string Level { get; set; }

    public string Season { get; set; }

    public Guid? FormationId { get; set; }

    public string PrimaryColor { get; set; }

    public string SecondaryColor { get; set; }

    public bool IsArchived { get; set; }

    public DateTime CreatedAt { get; set; }

    public DateTime UpdatedAt { get; set; }

    public virtual AgeGroup AgeGroup { get; set; }

    public virtual Club Club { get; set; }

    public virtual Formation Formation { get; set; }

    public virtual ICollection<KitOrder> KitOrders { get; set; } = new List<KitOrder>();

    public virtual ICollection<Kit> Kits { get; set; } = new List<Kit>();

    public virtual ICollection<Match> Matches { get; set; } = new List<Match>();

    public virtual ICollection<PlayerTeam> PlayerTeams { get; set; } = new List<PlayerTeam>();

    public virtual ICollection<TeamCoach> TeamCoaches { get; set; } = new List<TeamCoach>();

    public virtual ICollection<TrainingSession> TrainingSessions { get; set; } = new List<TrainingSession>();
}
