// <auto-generated> This file has been auto generated by EF Core Power Tools. </auto-generated>
#nullable disable
using System;
using System.Collections.Generic;

namespace OurGame.Persistence.Models;

public partial class TrainingPlan
{
    public Guid Id { get; set; }

    public Guid PlayerId { get; set; }

    public Guid? CreatedBy { get; set; }

    public DateOnly? PeriodStart { get; set; }

    public DateOnly? PeriodEnd { get; set; }

    public string Status { get; set; }

    public DateTime CreatedAt { get; set; }

    public DateTime UpdatedAt { get; set; }

    public virtual Coach CreatedByNavigation { get; set; }

    public virtual ICollection<PersonalSession> PersonalSessions { get; set; } = new List<PersonalSession>();

    public virtual Player Player { get; set; }

    public virtual ICollection<ProgressNote> ProgressNotes { get; set; } = new List<ProgressNote>();

    public virtual ICollection<TrainingObjective> TrainingObjectives { get; set; } = new List<TrainingObjective>();
}
