// <auto-generated> This file has been auto generated by EF Core Power Tools. </auto-generated>
#nullable disable
using System;
using System.Collections.Generic;
using OurGame.Persistence.Enums;

namespace OurGame.Persistence.Models;

public partial class User
{
    public Guid Id { get; set; }

    public string Email { get; set; }

    public string FirstName { get; set; }

    public string LastName { get; set; }

    public UserRole Role { get; set; }

    public Guid? ClubId { get; set; }

    public Guid? PlayerId { get; set; }

    public Guid? StaffId { get; set; }

    public string Photo { get; set; }

    public string Preferences { get; set; }

    public DateTime CreatedAt { get; set; }

    public DateTime UpdatedAt { get; set; }

    public virtual Club Club { get; set; }

    public virtual ICollection<KitOrder> KitOrders { get; set; } = new List<KitOrder>();

    public virtual ICollection<PlayerImage> PlayerImages { get; set; } = new List<PlayerImage>();

    public virtual ICollection<PlayerParent> PlayerParents { get; set; } = new List<PlayerParent>();
}
